# achtsamkeit-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  example_queries.http
migrations/2022-09-15-084839_create_users/: up.sql
migrations/2022-09-19-113408_create_moods/: down.sql  up.sql
src/: fairings.rs  main.rs  models.rs  routes.rs  schema.rs
src/routes/: auth.rs  mood.rs
